Improve Resolver; Create Action Declaration Rows

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -148,9 +148,9 @@
     "        self.rangeModifier = weaponSystems(self.actor.oid).Targeting.Modifier.terminant\n",
     "\n",
     "        self.objMovement = self.rsc.trackedObjectLastDistance(self.actor)\n",
-    "        self.aMM = -1 if self.objMovement is None or self.objMovement < 10 else 1\n",
+    "        self.aMM = -1 if self.objMovement is None or self.objMovement < 10 else 0\n",
     "        self.targetMovement = self.rsc.trackedObjectLastDistance(self.target)\n",
-    "        self.tMM = -1 if self.targetMovement is None or self.targetMovement < 10 else mc.TMM(self.actor.oid).terminant\n",
+    "        self.tMM = 0 if self.targetMovement is None or self.targetMovement < 10 else mc.TMM(self.actor.oid).terminant\n",
     "        self.skill = mc.Skill(self.actor.oid).terminant\n",
     "        self.otherModifiers = 0\n",
     "        self.targetNumber = int(self.skill) + self.aMM + self.tMM + self.otherModifiers + self.rangeModifier\n",
@@ -303,11 +303,14 @@
     "        return [*mc.XYLocation(capture.oid).terminant, mc.Elevation(capture.oid).terminant]\n",
     "\n",
     "    def commitChanges(self, objDef, overwrite=True):\n",
-    "        if self.expectedChange is not None and not self.expectedChange.changeOverlap(objDef):\n",
-    "            print(f\"Change {overlap} is not in expected location\")\n",
-    "\n",
     "        try:\n",
     "            existingIndex = self.memory.index(objDef.previousVersion())\n",
+    "            existingMem = self.memory[existingIndex]\n",
+    "            if (self.expectedChange is not None and existingMem == self.expectedChange.lastChange \n",
+    "                and self.overlappingChangeSets(self.expectedChange, objDef)\n",
+    "            ):\n",
+    "                print(f\"Requested Movement Fulfilled\")\n",
+    "                self.clearExpectedMovement()\n",
     "            print(f\"Updating Memory {objDef.oid}\")\n",
     "            self.memory[existingIndex].update(objDef, overwrite=overwrite)\n",
     "        except ValueError:\n",
@@ -448,6 +451,9 @@
     "    def mech_skill(self, mech_oid: str):\n",
     "        return mc.Skill(mech_oid).terminant\n",
     "\n",
+    "    def objectSpeed(self, mech_oid: str):\n",
+    "        return mc.Move.Movement.MovementSpeed(mech_oid).terminant\n",
+    "\n",
     "    def factions(self):\n",
     "        return mc.Faction.terminants()\n",
     "\n",
@@ -470,7 +476,7 @@
     "        return target.oid != actor.oid and \\\n",
     "            self.object_type(target.oid) in [\"Unit\", \"Structure\"] and \\\n",
     "            self.faction(actor.oid) != self.faction(target.oid) and \\\n",
-    "            self.line_of_sight(actor, target)\n",
+    "            self.line_of_sight(actor, target) and not self.obj_destroyed(target.oid)\n",
     "\n",
     "    @property\n",
     "    def objectsAndColors(self):\n",
@@ -552,6 +558,7 @@
     "                if lastChange is not None and lastChange.changeType not in ['delete', None]:\n",
     "                    lastChangeContour = np.array([lastChange.changePoints], dtype=np.int32)\n",
     "                    camImage = cv2.drawContours(camImage, lastChangeContour, -1 , (0, 0, 127), -1)\n",
+    "\n",
     "            # Paint classification green\n",
     "            if self.lastClassification is not None and not self.lastClassification.empty:\n",
     "                lastClass = self.lastClassification.changeSet[camName]\n",
@@ -573,12 +580,20 @@
     "\n",
     "            if self.expectedChange is not None:\n",
     "                if self.expectedChange.changeSet[camName].changeType not in ['delete', None]:\n",
-    "                    memContour = np.array([memObj.changeSet[camName].changePoints], dtype=np.int32)\n",
-    "                    camImage = cv2.drawContours(camImage, memContour, -1, color, -1)\n",
-    "                    if show_interactions and self.objectCouldInteract(memObj):\n",
-    "                        center_x = int(np.mean(memContour[:, :, 0]))  # Mean of x-coordinates\n",
-    "                        center_y = int(np.mean(memContour[:, :, 1]))  # Mean of y-coordinates\n",
-    "                        camImage = cv2.circle(camImage, (center_x, center_y), radius=10, color=(0, 255, 0), thickness=-1)\n",
+    "                    memContour = np.array([self.expectedChange.changeSet[camName].changePoints], dtype=np.int32)\n",
+    "                    center_x = int(np.mean(memContour[:, :, 0]))  # Mean of x-coordinates\n",
+    "                    center_y = int(np.mean(memContour[:, :, 1]))  # Mean of y-coordinates\n",
+    "\n",
+    "                    \n",
+    "                    objContour = np.array([self.expectedChange.lastChange.changeSet[camName].changePoints], dtype=np.int32)\n",
+    "                    obj_center_x = int(np.mean(objContour[:, :, 0]))  # Mean of x-coordinates\n",
+    "                    obj_center_y = int(np.mean(objContour[:, :, 1]))  # Mean of y-coordinates\n",
+    "                    camImage = cv2.circle(camImage, (center_x, center_y), radius=10, color=(0, 255, 0), thickness=-1)\n",
+    "                    camImage = cv2.line(\n",
+    "                        camImage,\n",
+    "                        np.array((center_x, center_y), dtype=np.int32),\n",
+    "                        np.array((obj_center_x, obj_center_y), dtype=np.int32),\n",
+    "                        (125, 255, 0), 5)\n",
     "\n",
     "            camImage = cv2.resize(camImage, [480, 640], interpolation=cv2.INTER_AREA)\n",
     "            images[camName] = camImage\n",
@@ -609,7 +624,12 @@
     "                    miniMap = cv2.circle(miniMap, (center_x, center_y), radius=10, color=(0, 255, 0), thickness=-1)\n",
     "\n",
     "        if self.expectedChange is not None:\n",
-    "            miniMap = cv2.circle(miniMap, np.array(self.cc.rsc.changeSetToRealCenter(self.expectedChange), dtype=np.int32), radius=10, color=(0, 255, 0), thickness=-1)\n",
+    "            miniMap = cv2.circle(miniMap, np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(self.expectedChange), [x, y])], dtype=np.int32), radius=10, color=(125, 255, 0), thickness=-1)\n",
+    "            miniMap = cv2.line(\n",
+    "                miniMap,\n",
+    "                np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(self.expectedChange), [x, y])], dtype=np.int32),\n",
+    "                np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(self.expectedChange.lastChange), [x, y])], dtype=np.int32),\n",
+    "                (125, 255, 0), 5)\n",
     "        return miniMap\n",
     "\n",
     "    def shift_hull_within_bounds(self, hull, shift, image_shape):\n",
@@ -634,67 +654,73 @@
     "    def buildMovementHeatMap(self, harmonyObject: HarmonyObject):\n",
     "        hull = self.cc.objectToHull(harmonyObject)\n",
     "\n",
-    "        movement_speed = mc.MovementSpeed(harmonyObject.oid).terminant\n",
-    "        generate_ds = lambda: [[1, 0], [1, 0.5], [1, 1], [0.5, 1], [0, 1], [-0.5, 1], [-1, 1], [-1, 0.5], [-1, 0], [-1, -0.5], [-1, -1], [-0.5, -1], [0, -1], [0.5, -1], [1, -1]]\n",
-    "        path_blocked = {tuple(path): False for path in generate_ds()}\n",
-    "        costByLocation = {}\n",
-    "        near_moves = []\n",
-    "        med_moves = []\n",
-    "        long_moves = []\n",
-    "        full_moves = []\n",
-    "        for dx, dy in generate_ds():\n",
-    "            for i in range(1, 20, 2):\n",
-    "                i = i * 0.3\n",
-    "                if path_blocked[(dx, dy)]:\n",
-    "                    continue\n",
-    "                x, y = dx * i, dy * i\n",
-    "                elevation = 1\n",
-    "                # Find Object overlaps at x, y position\n",
-    "                # Elevation = 1 or elevation(overlaps[0]) + 1\n",
-    "                zeros = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
-    "                shiftedHull= self.shift_hull_within_bounds(hull, np.array([x * INCHES_TO_MM, y * INCHES_TO_MM], dtype=np.int32), zeros.shape)\n",
-    "                shiftedIm = cv2.drawContours(zeros.copy(), [shiftedHull], -1, 255, -1)\n",
-    "                for obj in self.memory:\n",
-    "                    if obj.oid == harmonyObject.oid:\n",
+    "        movementHeatMap = getattr(harmonyObject, \"movementHeatMap\", {}).get(str(mc.XYLocation(harmonyObject.oid).terminant), None)\n",
+    "        if movementHeatMap is None:\n",
+    "            movement_speed = mc.MovementSpeed(harmonyObject.oid).terminant\n",
+    "            generate_ds = lambda: [[1, 0], [1, 0.5], [1, 1], [0.5, 1], [0, 1], [-0.5, 1], [-1, 1], [-1, 0.5], [-1, 0], [-1, -0.5], [-1, -1], [-0.5, -1], [0, -1], [0.5, -1], [1, -1]]\n",
+    "            path_blocked = {tuple(path): False for path in generate_ds()}\n",
+    "            costByLocation = {}\n",
+    "            near_moves = []\n",
+    "            med_moves = []\n",
+    "            long_moves = []\n",
+    "            full_moves = []\n",
+    "            for dx, dy in generate_ds():\n",
+    "                for i in range(1, 20, 2):\n",
+    "                    i = i * 0.3\n",
+    "                    if path_blocked[(dx, dy)]:\n",
     "                        continue\n",
-    "                    objHull = self.cc.objectToHull(obj)\n",
-    "                    changeIm = cv2.drawContours(zeros.copy(), [objHull], -1, 255, -1)\n",
-    "                    overlap = cv2.bitwise_and(changeIm, shiftedIm)\n",
-    "                    if overlap.any():\n",
-    "                        if self.object_type(obj.oid) in [\"Terrain\", \"Structure\"]:\n",
-    "                            elevation = mc.Elevation(obj.oid).terminant + 1\n",
-    "                        elif self.object_type(obj.oid) in [\"Unit\"]:\n",
-    "                            print(f\"{dx}, {dy} is blocked\")\n",
-    "                            path_blocked[(dx, dy)] = True\n",
-    "                            break\n",
-    "        \n",
-    "                movement_cost = mc.Move.movement_cost([dx * i * INCHES_TO_MM, dy * i * INCHES_TO_MM, elevation * INCHES_TO_MM])\n",
-    "\n",
-    "                if movement_cost >= movement_speed * 0.95:\n",
-    "                    path_blocked[(dx, dy)] = True\n",
-    "                else:\n",
-    "                    costByLocation[(x, y)] = movement_cost\n",
-    "                    if movement_cost < movement_speed * 0.2:\n",
-    "                        near_moves.append((x, y))\n",
-    "                    elif movement_cost < movement_speed * 0.5:\n",
-    "                        med_moves.append((x, y))\n",
-    "                    elif movement_cost < movement_speed * 0.7:\n",
-    "                        long_moves.append((x, y))\n",
+    "                    x, y = dx * i, dy * i\n",
+    "                    elevation = 1\n",
+    "                    # Find Object overlaps at x, y position\n",
+    "                    # Elevation = 1 or elevation(overlaps[0]) + 1\n",
+    "                    zeros = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
+    "                    shiftedHull= self.shift_hull_within_bounds(hull, np.array([x * INCHES_TO_MM, y * INCHES_TO_MM], dtype=np.int32), zeros.shape)\n",
+    "                    shiftedIm = cv2.drawContours(zeros.copy(), [shiftedHull], -1, 255, -1)\n",
+    "                    for obj in self.memory:\n",
+    "                        if obj.oid == harmonyObject.oid:\n",
+    "                            continue\n",
+    "                        objHull = self.cc.objectToHull(obj)\n",
+    "                        changeIm = cv2.drawContours(zeros.copy(), [objHull], -1, 255, -1)\n",
+    "                        overlap = cv2.bitwise_and(changeIm, shiftedIm)\n",
+    "                        if overlap.any():\n",
+    "                            if self.object_type(obj.oid) in [\"Terrain\", \"Structure\"]:\n",
+    "                                elevation = mc.Elevation(obj.oid).terminant + 1\n",
+    "                            elif self.object_type(obj.oid) in [\"Unit\"]:\n",
+    "                                print(f\"{dx}, {dy} is blocked\")\n",
+    "                                path_blocked[(dx, dy)] = True\n",
+    "                                break\n",
+    "            \n",
+    "                    movement_cost = mc.Move.movement_cost([dx * i * INCHES_TO_MM, dy * i * INCHES_TO_MM, elevation * INCHES_TO_MM])\n",
+    "    \n",
+    "                    if movement_cost >= movement_speed * 0.95:\n",
+    "                        path_blocked[(dx, dy)] = True\n",
     "                    else:\n",
-    "                        full_moves.append((x, y))\n",
+    "                        costByLocation[(x, y)] = movement_cost\n",
+    "                        if movement_cost < movement_speed * 0.2:\n",
+    "                            near_moves.append((x, y))\n",
+    "                        elif movement_cost < movement_speed * 0.5:\n",
+    "                            med_moves.append((x, y))\n",
+    "                        elif movement_cost < movement_speed * 0.7:\n",
+    "                            long_moves.append((x, y))\n",
+    "                        else:\n",
+    "                            full_moves.append((x, y))\n",
+    "    \n",
+    "            layer_hulls = []\n",
+    "            for moves, color in zip([near_moves, med_moves, long_moves, full_moves], [(0, 255, 0), (0, 255, 125), (0, 125, 255), (0, 0, 255)]):\n",
+    "                if len(moves) == 0:\n",
+    "                    continue\n",
+    "                image = np.zeros([1200, 1200, 1], dtype=\"uint8\")\n",
+    "                move_hulls = [hull + np.array([x * INCHES_TO_MM, y * INCHES_TO_MM], dtype=np.int32) for x, y in moves]\n",
+    "                move_hull = cv2.convexHull(np.vstack(move_hulls))\n",
+    "                layer_hulls.append((move_hull, color))\n",
     "\n",
-    "        layer_hulls = []\n",
-    "        for moves, color in zip([near_moves, med_moves, long_moves, full_moves], [(0, 255, 0), (0, 255, 125), (0, 125, 255), (0, 0, 255)]):\n",
-    "            if len(moves) == 0:\n",
-    "                continue\n",
-    "            image = np.zeros([1200, 1200, 1], dtype=\"uint8\")\n",
-    "            move_hulls = [hull + np.array([x * INCHES_TO_MM, y * INCHES_TO_MM], dtype=np.int32) for x, y in moves]\n",
-    "            move_hull = cv2.convexHull(np.vstack(move_hulls))\n",
-    "            layer_hulls.append((move_hull, color))\n",
-    "\n",
-    "        image = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
-    "        for layer_hull, color in layer_hulls[::-1]:\n",
-    "            image = cv2.drawContours(image, [layer_hull], -1, color, -1)\n",
+    "            image = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
+    "            for layer_hull, color in layer_hulls[::-1]:\n",
+    "                image = cv2.drawContours(image, [layer_hull], -1, color, -1)\n",
+    "                \n",
+    "            harmonyObject.movementHeatMap = {str(mc.XYLocation(harmonyObject.oid).terminant): image}\n",
+    "        else:\n",
+    "            image = movementHeatMap\n",
     "\n",
     "        return image\n",
     "\n",
@@ -721,14 +747,29 @@
     "        return cv2.addWeighted(heatMap, alpha, minimap, 1 - alpha, 0)\n",
     "\n",
     "    def buildVisibilityMap(self, harmonyObject: HarmonyObject):\n",
+    "        image = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
     "        if self.cc.rsc is None:\n",
     "            return image\n",
-    "        \n",
-    "        x, y, w, h = self.cc.realSpaceBoundingBox()\n",
     "\n",
-    "        hull = self.cc.objectToHull(harmonyObject)\n",
-    "        center = [int(d) for d in mc.XYLocation(harmonyObject.oid).terminant]\n",
-    "\n",
+    "        visibilityMap = getattr(harmonyObject, \"visibilityMap\", {}).get(str(mc.XYLocation(harmonyObject.oid).terminant), None)\n",
+    "        if visibilityMap is None:\n",
+    "            x, y, w, h = self.cc.realSpaceBoundingBox()\n",
+    "    \n",
+    "            hull = self.cc.objectToHull(harmonyObject)\n",
+    "            center = [int(d) for d in mc.XYLocation(harmonyObject.oid).terminant]\n",
+    "    \n",
+    "            for radius, color in zip([42 * INCHES_TO_MM, 24 * INCHES_TO_MM, 6 * INCHES_TO_MM], [(0, 0, 255), (0, 125, 255), (0, 255, 0)]):\n",
+    "                cv2.circle(image, center, int(radius), color, -1)\n",
+    "    \n",
+    "            for target in self.memory:\n",
+    "                if self.can_target(harmonyObject, target):\n",
+    "                    cv2.line(image, center, [int(d) for d in mc.XYLocation(target.oid).terminant], color=(0, 0, 0), thickness=2)\n",
+    "    \n",
+    "            image = image[y:y+h, x:x+w]\n",
+    "            harmonyObject.visibilityMap = {str(mc.XYLocation(harmonyObject.oid).terminant): image}\n",
+    "        else:\n",
+    "            image = visibilityMap\n",
+    "    \n",
     "        def select_color(mem):\n",
     "            if mem.oid == harmonyObject.oid:\n",
     "                return (0, 255, 0) \n",
@@ -739,20 +780,10 @@
     "                    return (125, 255, 0)\n",
     "            else:\n",
     "                return (255, 0, 0)\n",
-    "        \n",
+    "            \n",
     "        minimap = self.buildMiniMap(\n",
     "            objectsAndColors=[MiniMapObject(mem, select_color(mem)) for mem in self.memory],\n",
     "            showInteractions=False)\n",
-    "\n",
-    "        image = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
-    "        for radius, color in zip([42 * INCHES_TO_MM, 24 * INCHES_TO_MM, 6 * INCHES_TO_MM], [(0, 0, 255), (0, 125, 255), (0, 255, 0)]):\n",
-    "            cv2.circle(image, center, int(radius), color, -1)\n",
-    "\n",
-    "        for target in self.memory:\n",
-    "            if self.can_target(harmonyObject, target):\n",
-    "                cv2.line(image, center, [int(d) for d in mc.XYLocation(target.oid).terminant], color=(0, 0, 0), thickness=2)\n",
-    "\n",
-    "        image = image[y:y+h, x:x+w]\n",
     "\n",
     "        alpha = 0.2\n",
     "        image = cv2.addWeighted(image, alpha, minimap, 1 - alpha, 0)\n",
