--- a/harmony/dma/MechaCombat/MovementSystem.ipynb
+++ b/harmony/dma/MechaCombat/MovementSystem.ipynb
@@ -162,7 +162,7 @@
     "        movement_cost = cls.movement_cost(delta)\n",
     "\n",
     "        if movement_cost > movementspeed:\n",
-    "            raise MovementSpeed.MovementSpeedViolation(f\"Cannot move unit further ({movement_cost}) than its movement speed ({movementspeed})\")\n",
+    "            raise MovementSpeed.MovementSpeedViolation(f\"Cannot move unit further ({movement_cost:4.2f}) than its movement speed ({movementspeed:4.2f})\")\n",
     "\n",
     "        newLocation = [sL + lD for sL, lD in zip(xyz, delta)]\n",
     "        xy = newLocation[:2]\n",
