--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -396,12 +396,7 @@
     "        return self.lastMemory\n",
     "            \n",
     "    def __repr__(self):\n",
-    "        return f\"CalibMac -- {self.mode}{'' if self.mode == 'passive' else '-'+self.dowel_position} - {self.state} (#T:{len(self.transitions)})\"\n",
-    "\n",
-    "    def commitChanges(self, objDef, overwrite=True):\n",
-    "        if self.expectedChange is not None and not self.expectedChange.changeOverlap(objDef):\n",
-    "            raise Exception(f\"Change is not in expected location\")\n",
-    "        super().commitChanges(objDef)"
+    "        return f\"CalibMac -- {self.mode}{'' if self.mode == 'passive' else '-'+self.dowel_position} - {self.state} (#T:{len(self.transitions)})\"\n"
    ]
   },
   {
@@ -625,12 +620,12 @@
     "            return np.zeros([10, 10], dtype=\"float32\")\n",
     "\n",
     "        images = {cam: change.after for cam, change in changeSet.changeSet.items() if change.changeType not in [\"delete\", None]}\n",
-    "        # Add snippet of object from MiniMap\n",
-    "        miniMap = self.buildMiniMap()\n",
-    "        hull = self.cc.objectToHull(changeSet)\n",
-    "        mmcb_x, mmcb_y, mmcb_w, mmcb_h = cv2.boundingRect(np.array(hull, dtype=np.int32))\n",
+    "        # # Add snippet of object from MiniMap\n",
+    "        # miniMap = self.buildMiniMap()\n",
+    "        # hull = self.cc.objectToHull(changeSet)\n",
+    "        # mmcb_x, mmcb_y, mmcb_w, mmcb_h = cv2.boundingRect(np.array(hull, dtype=np.int32))\n",
     "\n",
-    "        images['minimap'] = miniMap[mmcb_y: mmcb_y + mmcb_h, mmcb_x: mmcb_x + mmcb_w]\n",
+    "        # images['minimap'] = miniMap[mmcb_y: mmcb_y + mmcb_h, mmcb_x: mmcb_x + mmcb_w]\n",
     "        \n",
     "        maxHeight =  max([im.shape[0] + margin * 2 for im in images.values()])\n",
     "        filler = np.zeros((maxHeight, 50, 3), np.uint8)\n",
@@ -681,13 +676,27 @@
     "                changeType=\"Add\",\n",
     "                lastChange=None\n",
     "            ) for cN in self.cc.cameras.keys()})\n",
+    "        self.expectedChange.lastChange = trackedObject\n",
     "\n",
     "    def clearExpectedMovement(self):\n",
     "        self.expectedChange = None\n",
     "\n",
+    "    def overlappingChangeSets(self, obj0: ChangeSet, obj1: ChangeSet):\n",
+    "        print(f\"Comparing: {obj0} to {obj1}\")\n",
+    "        for camName, obj0_cameraChange in obj0.changeSet.items():\n",
+    "            obj1_cameraChange = obj1.changeSet[camName]\n",
+    "            if obj0_cameraChange.changeType in [\"delete\", None] or obj1_cameraChange.changeType in [\"delete\", None]:\n",
+    "                continue\n",
+    "            if not obj0_cameraChange.changeOverlap(obj1_cameraChange):\n",
+    "                print(f\"{obj0_cameraChange} != {obj1_cameraChange}\")\n",
+    "                return False\n",
+    "\n",
+    "        print(f\"ChangeSets overlap!\")\n",
+    "        return True\n",
+    "\n",
     "    def commitChanges(self, objDef, overwrite=True):\n",
-    "        if self.expectedChange is not None and not self.expectedChange.changeOverlap(objDef):\n",
-    "            raise Exception(f\"Change is not in expected location\")\n",
+    "        if self.expectedChange is not None and not self.overlappingChangeSets(self.expectedChange, objDef):\n",
+    "            print(f\"Change is not in expected location\")\n",
     "        return super().commitChanges(objDef, overwrite)"
    ]
   },
