--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -234,10 +234,11 @@
     "class Camera:\n",
     "    camName: str\n",
     "    activeZone: list\n",
+    "    rotate: bool = False\n",
     "    \n",
     "    IMAGE_BUFFER_DEPTH = 7\n",
     "    CAPTURE_FRAMES = 3\n",
-    "    MILLIMETERS_PER_PIXEL = 2\n",
+    "    CHANGE_THRESHOLD = 20\n",
     "    MI = 2\n",
     "    xmax = 2560\n",
     "    ymax = 1920\n",
@@ -277,16 +278,15 @@
     "        finally:\n",
     "            cap.release()\n",
     "        return image\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def contoursBetween(im0, im1, threshold=82):\n",
+    "\n",
+    "    def contoursBetween(self, im0, im1):\n",
     "        if im0 is None or im1 is None:\n",
     "            return []\n",
     "        img_height = im0.shape[0]\n",
     "        diff = cv2.absdiff(cv2.cvtColor(im0, cv2.COLOR_BGR2GRAY),\n",
     "                           cv2.cvtColor(im1, cv2.COLOR_BGR2GRAY))\n",
     "\n",
-    "        thresh = cv2.threshold(cv2.GaussianBlur(diff, (15, 25), 0), 15, 255,cv2.THRESH_BINARY)[1]\n",
+    "        thresh = cv2.threshold(cv2.GaussianBlur(diff, (15, 25), 0), self.CHANGE_THRESHOLD, 255,cv2.THRESH_BINARY)[1]\n",
     "        kernel = np.ones((3, 3), np.uint8) \n",
     "        dilate = cv2.dilate(thresh, kernel, iterations=2)\n",
     "        return cv2.findContours(dilate.copy(), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[0]\n",
@@ -378,18 +378,10 @@
    },
    "outputs": [],
    "source": [
-    "@dataclass\n",
+    "@dataclass(kw_only=True)\n",
     "class RemoteCamera(Camera):\n",
     "    address: str\n",
     "    auth: list[str] | None = None\n",
-    "    \n",
-    "    IMAGE_BUFFER_DEPTH = 7\n",
-    "    CAPTURE_FRAMES = 3\n",
-    "    MILLIMETERS_PER_PIXEL = 2\n",
-    "    MI = 2\n",
-    "    xmax = 2560\n",
-    "    ymax = 1920\n",
-    "    rotate: bool = False\n",
     "\n",
     "    def collectImage(self) -> np.ndarray:\n",
     "        image = None\n",
