Parallel object collision and elevation calculation

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -10,6 +10,7 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "from datetime import datetime\n",
     "import random\n",
     "from dataclasses import dataclass, asdict\n",
     "import os\n",
@@ -418,10 +419,29 @@
     "        no_actions = len(mc.GameEvents.get_declared_no_action_events())\n",
     "        return declared_actions - no_actions\n",
     "\n",
+    "    def refreshMovementMaps(self):\n",
+    "        print(f\"Building heatmaps\")\n",
+    "        start = datetime.utcnow()\n",
+    "        for mech in mc.Mech.entities():\n",
+    "            if self.obj_destroyed(mech):\n",
+    "                continue\n",
+    "            self.buildMovementHeatMap(self.findObject(mech))\n",
+    "        print(f\"Took: {(datetime.utcnow() - start).total_seconds() / 60}\")\n",
+    "\n",
+    "    def refreshVisibilityMaps(self):\n",
+    "        print(f\"Building heatmaps\")\n",
+    "        start = datetime.utcnow()\n",
+    "        for mech in mc.Mech.entities():\n",
+    "            if self.obj_destroyed(mech):\n",
+    "                continue\n",
+    "            self.buildMovementHeatMap(self.findObject(mech))\n",
+    "        print(f\"Took: {(datetime.utcnow() - start).total_seconds() / 60}\")\n",
+    "    \n",
     "    def commitAdditions(self):\n",
     "        for entity in mc.XYLocation.entities():\n",
     "            harmonyObject = self.findObject(entity)\n",
     "            mc.XYLocation(entity, self.captureRealCoord(harmonyObject)[:2])\n",
+    "        self.refreshMovementMaps()\n",
     "        mc.GameState.newPhase(\"Add\")\n",
     "\n",
     "    def commitMovement(self):\n",
@@ -436,6 +456,7 @@
     "    def resolveRound(self):\n",
     "        for entity in mc.Movement.entities():\n",
     "            mc.DistanceMoved.set_relationship(entity, 0)\n",
+    "        self.refreshMovementMaps()\n",
     "        mc.GameState.newPhase(\"Action\")\n",
     "        self.trackMode()\n",
     "\n",
@@ -664,6 +685,20 @@
     "            med_moves = []\n",
     "            long_moves = []\n",
     "            full_moves = []\n",
+    "            zeros = np.zeros([1200, 1200, 1], dtype=\"uint8\")\n",
+    "            objectOverlay = zeros.copy()\n",
+    "            elevationOverlays = {}\n",
+    "            for obj in self.memory:\n",
+    "                if obj.oid == harmonyObject.oid:\n",
+    "                    continue\n",
+    "                if self.object_type(obj.oid) in [\"Terrain\", \"Structure\"]:\n",
+    "                    elevation = mc.Elevation(obj.oid).terminant + 1\n",
+    "                    if elevation in elevationOverlays:\n",
+    "                        elevationOverlays[elevation] = cv2.drawContours(elevationOverlays[elevation], self.cc.objectToHull(obj), -1, 255, -1)\n",
+    "                    else:\n",
+    "                        elevationOverlays[elevation] = cv2.drawContours(zeros.copy(), self.cc.objectToHull(obj), -1, 255, -1)\n",
+    "                else:\n",
+    "                    objectOverlay = cv2.drawContours(objectOverlay, self.cc.objectToHull(obj), -1, 255, -1)\n",
     "            for dx, dy in generate_ds():\n",
     "                for i in range(1, 20, 2):\n",
     "                    i = i * 0.3\n",
@@ -673,24 +708,20 @@
     "                    elevation = 1\n",
     "                    # Find Object overlaps at x, y position\n",
     "                    # Elevation = 1 or elevation(overlaps[0]) + 1\n",
-    "                    zeros = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
     "                    shiftedHull= self.shift_hull_within_bounds(hull, np.array([x * INCHES_TO_MM, y * INCHES_TO_MM], dtype=np.int32), zeros.shape)\n",
     "                    shiftedIm = cv2.drawContours(zeros.copy(), [shiftedHull], -1, 255, -1)\n",
-    "                    for obj in self.memory:\n",
-    "                        if obj.oid == harmonyObject.oid:\n",
-    "                            continue\n",
-    "                        objHull = self.cc.objectToHull(obj)\n",
-    "                        changeIm = cv2.drawContours(zeros.copy(), [objHull], -1, 255, -1)\n",
-    "                        overlap = cv2.bitwise_and(changeIm, shiftedIm)\n",
-    "                        if overlap.any():\n",
-    "                            if self.object_type(obj.oid) in [\"Terrain\", \"Structure\"]:\n",
-    "                                elevation = mc.Elevation(obj.oid).terminant + 1\n",
-    "                            elif self.object_type(obj.oid) in [\"Unit\"]:\n",
-    "                                print(f\"{dx}, {dy} is blocked\")\n",
-    "                                path_blocked[(dx, dy)] = True\n",
-    "                                break\n",
+    "                    objectElevation = None\n",
+    "                    for elevation in sorted(elevationOverlays.keys(), reverse=True):\n",
+    "                        if cv2.bitwise_and(elevationOverlays[elevation], shiftedIm).any():\n",
+    "                            objectElevation = elevation\n",
+    "                            break\n",
+    "                    objectElevation = objectElevation or 0\n",
+    "                    \n",
+    "                    if cv2.bitwise_and(objectOverlay, shiftedIm).any():\n",
+    "                        print(f\"{dx}, {dy} is blocked\")\n",
+    "                        path_blocked[(dx, dy)] = True\n",
     "            \n",
-    "                    movement_cost = mc.Move.movement_cost([dx * i * INCHES_TO_MM, dy * i * INCHES_TO_MM, elevation * INCHES_TO_MM])\n",
+    "                    movement_cost = mc.Move.movement_cost([dx * i * INCHES_TO_MM, dy * i * INCHES_TO_MM, objectElevation * INCHES_TO_MM])\n",
     "    \n",
     "                    if movement_cost >= movement_speed * 0.95:\n",
     "                        path_blocked[(dx, dy)] = True\n",
