--- a/harmony/dma/MechaCombat/MovementSystem.ipynb
+++ b/harmony/dma/MechaCombat/MovementSystem.ipynb
@@ -99,6 +99,27 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "f77e41b6-f92e-442f-b573-e5648f3e73ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Footprint(System):\n",
+    "    \"\"\" 2D Footprint of an Object as an Contour\"\"\"\n",
+    "    @classmethod\n",
+    "    def get_relationship(cls, entity):\n",
+    "        rel = super().get_relationship(entity)\n",
+    "        if rel is not None:\n",
+    "            return np.array(json.loads(rel), dtype=np.int32)\n",
+    "        return None\n",
+    "\n",
+    "    @classmethod\n",
+    "    def validate(cls, terminant):\n",
+    "        return json.dumps([(int(pnt[0]), int(pnt[1])) for contour in terminant for pnt in contour])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "e4fc095e-a95f-42ad-a2be-e61e564c0bf0",
    "metadata": {},
    "outputs": [],
@@ -106,6 +127,7 @@
     "@DistanceMoved.sd\n",
     "@JumpJets.sd\n",
     "@MovementSpeed.sd\n",
+    "@Footprint.sd\n",
     "class Movement(HyperSystem):\n",
     "    @classmethod\n",
     "    def has_jump_jets(cls, entity):\n",
@@ -113,12 +135,12 @@
     "    \n",
     "    @classmethod\n",
     "    def get_movement_speed(cls, entity):\n",
-    "        return int(MovementSpeed.get_relationship(entity))"
+    "        return float(MovementSpeed.get_relationship(entity))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b2d149af-714c-468a-a4ea-df2fcf2935b1",
    "metadata": {},
    "outputs": [],
