--- a/harmony/dma/MechaCombat/MechSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechSystem.ipynb
@@ -178,7 +178,38 @@
     "            \"Special\": json.dumps([\"AC2\", \"IF1\", \"LRM1\", \"REAR2\"]),\n",
     "            \"PointValue\": \"52\"\n",
     "        }\n",
-    "    })\n",
+    "    }),\n",
+    "    \"Warhawk\": Mech.buildMechFactory({\n",
+    "        \"Chassis\": \"Warhawk\",\n",
+    "        \"Unit\": {\n",
+    "            \"Move\": {  # Move System\n",
+    "                \"Movement\": {\"MovementSpeed\": 8, \"JumpJets\": \"null\", \"DistanceMoved\": 0},\n",
+    "                \"Elevation\": \"0\",\n",
+    "                \"XYLocation\": [0, 0]\n",
+    "            },\n",
+    "            \"Faction\": \"Unaligned\",\n",
+    "            \"Skill\": 4\n",
+    "        },\n",
+    "        \"MechDefinition\": {\n",
+    "            \"MechType\": \"BM\",\n",
+    "            \"MechModel\": \"Warhawk\",\n",
+    "            \"MechRole\": \"Brawler\",\n",
+    "            \"Weapons\": {  # Weapons System\n",
+    "                \"ShortRangeWeapons\": {\"Targeting\": {\"Modifier\": \"0\", \"Damage\": \"5\"}},\n",
+    "                \"MidRangeWeapons\": {\"Targeting\": {\"Modifier\": \"2\", \"Damage\": \"5\"}},\n",
+    "                \"LongRangeWeapons\": {\"Targeting\": {\"Modifier\": \"4\", \"Damage\": \"4\"}},\n",
+    "                \"Overheat\": {\"OverheatValue\": \"1\", \"OverheatDamage\": \"3\"}\n",
+    "            },\n",
+    "            \"UnitDamage\": {  # Unit Damage System\n",
+    "                \"Armor\": {\"ArmorPlating\": \"9\", \"ArmorPlatingDamage\": 0, \"ArmorStructural\": \"5\", \"ArmorStructuralDamage\": 0},\n",
+    "                \"CriticalHits\":  {\"EngineCriticalHits\": \"1\", \"FireControlCriticalHits\": \"1\", \"MPCriticalHits\": \"4\", \"WeaponsCriticalHits\": \"4\"}\n",
+    "            },\n",
+    "            \"Size\": \"4\",\n",
+    "            \"TMM\": \"1\",\n",
+    "            \"Special\": json.dumps([\"ENE\", \"HT1/1/-\", \"OMNI\"]),\n",
+    "            \"PointValue\": \"52\"\n",
+    "        }\n",
+    "    }),\n",
     "}"
    ]
   },
